# openalex-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  CITATION.cff  README.ipynb  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
demos/: OpenAlex.ipynb  README.md  notebook.ipynb
docs/: AffiliationsInner.md  Apc.md  ApcPricesInner.md  AssociatedInstitution.md  Author.md  Authors.md  AuthorsApi.md  AuthorsResponseSchema.md  AuthorshipsInner.md  AuthorshipsInnerAuthor.md  AuthorshipsInnerInstitutionsInner.md  AutoCompleteResultItem.md  AutoCompleteResultSchema.md  AutocompleteApi.md  BaseSelectionAttributes.md  CombinedApi.md  Concept.md  ConceptApi.md  ConceptIds.md  ConceptSchema.md  Concepts.md  ConceptsApi.md  ConceptsResponseSchema.md  CountsByYearInner.md  DefaultApi.md  DehydratedConcept.md  DehydratedInstitution.md  Domain.md  ErrorMessage.md  Field.md  Funder.md  FunderSchema.md  FundersApi.md  FundersArray.md  Geo.md  GetDomainById200Response.md  GetFieldById200Response.md  GetSubfieldById200Response.md  GetTopicById200Response.md  GetTopics200Response.md  (+77 more)
mearman_openalex_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openalex_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_affiliations_inner.py  test_apc.py  test_apc_prices_inner.py  test_associated_institution.py  test_author.py  test_authors.py  test_authors_api.py  test_authors_response_schema.py  test_authorships_inner.py  test_authorships_inner_author.py  test_authorships_inner_institutions_inner.py  (+106 more)
(+179 files in other folders)
